# workspaces.nvim

./: .gitignore  Cargo.toml  build.sh
crates/binding/: Cargo.toml
crates/binding/src/: lib.rs  package.rs  workspace.rs
crates/cargo/: Cargo.toml
crates/cargo/src/: lib.rs  metadata.rs  package.rs
crates/cargo/tests/: test.rs
crates/npm/: Cargo.toml
crates/npm/src/: glob.rs  lib.rs  package_json.rs  pnpm.rs
crates/npm/tests/fixtures/pnpm/: package.json
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs
lua/overseer/template/: cargo-workspace.lua  npm-workspace.lua
