[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
# Internal dependencies
workspace = { path = "crates/workspace" }
cargo = { path = "crates/cargo" }
npm = { path = "crates/npm" }

# External dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
anyhow = "1.0"
log = "0.4.22"
astro-run-logger = "0.1.3"
nvim-oxi = "0.5.1"
glob = "0.3.1"
