[package]
name = "workspace-binding"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# External dependencies
nvim-oxi = { workspace = true, features = ["neovim-0-10"] }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

# Internal dependencies
cargo = { workspace = true }
npm = { workspace = true }
workspace = { workspace = true }
