[package]
name = "npm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal dependencies
workspace = { workspace = true }

# External dependencies
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
log = { workspace = true }
glob = { workspace = true }
